# RealSenseNIRFramesRecorder

./: .gitmodules  CMakeLists.txt  cameraapplication.cpp  cameraapplication.h  cameragrabber.cpp  cameragrabber.h  cameraslist.cpp  cameraslist.h  consolewatcher.cpp  consolewatcher.h  imageframe.cpp  imageframe.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  remoteconnectionlist.cpp  remoteconnectionlist.h  remotesyncclient.cpp  remotesyncclient.h  remotesyncserver.cpp  remotesyncserver.h  ressources.qrc  v4l2camera.cpp  v4l2camera.h
modules/: CMakeLists.txt
